--- a/src/components/Planets/Planets.css
+++ b/src/components/Planets/Planets.css
@@ -10,10 +10,12 @@
 .planet{
     width: 100px;
     height: 100px;
-}
 
+}
 .text{
     position: absolute;
-    color: #d4e6e6;
-    font-size: 40px;
+    text-align: center;
+    width: 100%;
+    color: #e8efef;
+    font-size: 70px;
 }
